App_Convertida_A_react

--- a/index.html
+++ b/index.html
@@ -1,37 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Conociendo México</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header class="navbar">
-    <nav class="menu">
-      <a href="index.html" class="activo">Home</a>
-      <a href="lugares.html">Lugares</a>
-      <a href="comida.html">Comida</a>
-      <a href="tradiciones.html">Tradiciones</a>
-      <a href="mapa.html">Mapa</a>
-    </nav>
-    <div class="buscador">
-      <input type="text" placeholder="Buscar...">
-      <button>🔍</button>
-    </div>
-  </header>
-
-  <section class="hero">
-    <div class="contenido">
-      <h2 class="subtitulo">Conociendo</h2>
-      <h1 class="titulo">MÉXICO</h1>
-      <div class="ubicacion">
-        <span class="estado">Chiapas</span>
-        <span class="ciudad">SAN CRISTOBAL DE LAS CASAS</span>
-      </div>
-    </div>
-  </section>
-
-  <script src="script.js"></script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>conociendo_mexico</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
